@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="com.yammer.v1"
-      android:versionCode="20"
-      android:versionName="1.1">
+      android:versionCode="21"
+      android:versionName="1.2">
 
 	<!--
 		Permissions 
